objects/niq__Model__c.object
<CustomObject>
    <description>This object associates models to predictions, for use with Insights.</description>
    <fields>
        <fullName>niq__Active_Date__c</fullName>
        <description>The system automatically populates this optional date field with the activation date and time for this model.</description>
        <label>Date Activated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>niq__Prediction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Administrators populate this required lookup field with the associated prediction.</description>
        <label>Prediction</label>
        <referenceTo>niq__Prediction__c</referenceTo>
        <relationshipLabel>Models</relationshipLabel>
        <relationshipName>Model_To_Prediction</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>niq__Status__c</fullName>
        <description>The system automatically populates this required picklist with the model status. By default, the value is Needs Mapping.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs Mapping</fullName>
                    <default>true</default>
                    <label>Needs Mapping</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>niq__lookupKey__c</fullName>
        <description>The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Model</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>